	disbanded. A party is loaded when the first member becomes online or when it
	is created.
	* Implemented cross-channel parties. Player's party data is now saved when
	logging off, and is loaded when logging in.
	* Party members are notified when a member changes maps, changes levels,
	changes jobs, or changes HP.
	* Renamed some InterChannelCommunications methods to be more consistent.

2012-04-16  GoldenKevin  (revision 80)

	* Phase one of GameCharacter hierarchy realignment. MapEntity is now an
	interface that GameCharacter implements so that GameCharacter is free to
	inherit Player (or one of its subclasses).

2012-04-16  GoldenKevin  (revision 81)

	* Eliminated argonms.common.character.Player interface, replaced by
	argonms.common.character.Player.LimitedActionCharacter and
	argonms.common.character.Player.CharacterTools refactored into instance
	methods. LoggedInPlayer is now in its own file and is now an abstract class
	that inherits Player.
	* GameCharacter and ShopCharacter inherit LoggedInPlayer instead of just
	implementing it. LoginCharacter inherits the new Player class. Renamed
	instance variables in Player to be consistent with duplicate variables from
	GameCharacter and they now have protected access. Removed these duplicate
	variables from GameCharacter, as well as duplicate accessor and mutator
	methods.

2012-04-22  GoldenKevin  (revision 82)

	* Every party member in the same channel shares a single PartyList instance.
	This should reduce RAM usage and bandwidth between the center server and the
	game servers, but increases complexity somewhat and may raise a few gotchas
	revolving around sharing an instance between more than one player.
	* Rearranged some packets and renamed several party related things to be
	more consistent and to make their meanings clearer.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.