@@ -153,6 +153,7 @@ public final class Skills {
 		ARROW_RAIN = 3111004,
 		SILVER_HAWK = 3111005,
 
+		BOW_EXPERT = 3120005,
 		BOW_MASTER_MAPLE_WARRIOR = 3121000,
 		BOW_MASTER_SHARP_EYES = 3121002,
 		HURRICANE = 3121004,
@@ -169,6 +170,7 @@ public final class Skills {
 		ARROW_ERUPTION = 3211004,
 		GOLDEN_EAGLE = 3211005,
 
+		MARKSMAN_BOOST = 3220004,
 		XBOW_MASTER_MAPLE_WARRIOR = 3221000,
 		PIERCING_ARROW = 3221001,
 		XBOW_MASTER_SHARP_EYES = 3221002,
